package cn.edu.lcu.cs.designpattern.bridge.theory;

/**
 * 实现化角色
 *
 * @author ling
 */
public interface Implementor {
    public void operationImpl();
}
