package cn.edu.lcu.cs.designpattern.bridge.theory;

/**
 * 具体实现化角色
 *
 * @author ling
 */
public class ImplementorA implements Implementor {
    @Override
    public void operationImpl() {

    }
}
