package cn.edu.lcu.cs.designpattern.bridge.theory;

public class ImplementorB implements Implementor {
    @Override
    public void operationImpl() {

    }
}
