@startuml
class RefinedAbstraction {
+ void operation()
}
interface Implementor {
+ void operationImpl()
}
abstract class Abstraction {
# Implementor implementor
+ {abstract}void operation()
}
class ImplementorA {
+ void operationImpl()
}
class ImplementorB {
+ void operationImpl()
}


Abstraction <|-- RefinedAbstraction
Implementor <|.. ImplementorA
Implementor <|.. ImplementorB
@enduml